force-app/main/default/objects/Case_Team_Delete__e/Case_Team_Delete__e.object-meta.xml
<CustomObject>
    <label>Case Team Delete</label>
    <pluralLabel>Case Team Deletes</pluralLabel>
</CustomObject>