force-app/main/default/objects/Case_Team_Delete__e/fields/Case_Record_Id__c.field-meta.xml
<CustomField>
    <fullName>Case_Record_Id__c</fullName>
    <description>The Case record ID associated with the deleted Case Team Assignment.</description>
    <label>Case Record ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>