force-app/main/default/objects/Case_Team_Delete__e/fields/Case_Team_Assignment_Record_Id__c.field-meta.xml
<CustomField>
    <fullName>Case_Team_Assignment_Record_Id__c</fullName>
    <description>The deleted Case Team Assignment record ID.</description>
    <label>Case Team Assignment Record ID</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>