force-app/main/default/objects/Case_Team_Delete__e/fields/Salesforce_User_Record_Id__c.field-meta.xml
<CustomField>
    <fullName>Salesforce_User_Record_Id__c</fullName>
    <description>The Salesforce User record ID from the deleted Case Team Assignment.</description>
    <label>Salesforce User Record ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>